--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1103,3 +1103,29 @@ section {
     padding-right: 20px 15px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.rounded-circle {
+  border-radius: 16%!important;
+}
